<resources>
    <string name="app_name">Lifecycle Management</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Fragment</string>
    <string name="signup_fragment_label">Signup</string>
    <string name="start_fragment_label">Register</string>
    <string name="next">Next</string>

    <string name="error">Error</string>
    <string name="user_logged_in">%1$s %2$s is logged in!</string>

    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="previous">Previous</string>
</resources>