<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/StartFragment">

    <fragment
        android:id="@+id/StartFragment"
        android:name="com.example.lifecyclemanagement.StartFragment"
        android:label="@string/start_fragment_label"
        tools:layout="@layout/fragment_start">

        <action
            android:id="@+id/action_StartFragment_to_SingupFragment"
            app:destination="@id/SignupFragment" />
    </fragment>
    <fragment
        android:id="@+id/SignupFragment"
        android:name="com.example.lifecyclemanagement.SignupFragment"
        android:label="@string/signup_fragment_label"
        tools:layout="@layout/fragment_signup">

        <action
            android:id="@+id/action_SignupFragment_to_mainActivity"
            app:destination="@id/mainActivity" />
    </fragment>
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.lifecyclemanagement.MainActivity"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/activity_main" />
</navigation>